# TIPSSE_GNSS_FW-SW

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Max2771+pico接線圖.pptx  README.md  main.c  max2771.h  max2771_spi.c  max2771_spi.h  max2771_spi.pio  msc_disk.c  net.c  pico_fw_sw.py  pio_spi.py  reset_interface.c  server.c  server.h  spi_max2771.py  spi_test.py  tusb_config.h  usb_descriptors.c
hello/: CMakeLists.txt  Makefile  main.c
reference_example/: i2c.py  i2c_driver.py  input_ex.py  spi_driver.py
reference_example/hello/: CMakeLists.txt  Makefile  hello.pio  load.txt  main.c
reference_example/pwm/: pwm.py
www/: CMakeLists.txt  Makefile  index.html  package.json  tailwind.config.js
www/src/: index.css  index.mjs
